# OpenStarbound

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Doxyfile  README.md
source/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  vcpkg-configuration.json  vcpkg.json
source/application/: CMakeLists.txt  StarApplication.cpp  StarApplication.hpp  StarApplicationController.hpp  StarDesktopService_pc_steam.cpp  StarDesktopService_pc_steam.hpp  StarInputEvent.cpp  StarInputEvent.hpp  StarMainApplication.hpp  StarMainApplication_sdl.cpp  StarP2PNetworkingService_pc.cpp  StarP2PNetworkingService_pc.hpp  StarPlatformServices_pc.cpp  StarPlatformServices_pc.hpp  StarRenderer.cpp  StarRenderer.hpp  StarRenderer_gl4es.cpp  StarRenderer_gl4es.hpp  StarRenderer_opengl.cpp  StarRenderer_opengl.hpp  StarRenderer_opengl20.cpp  StarRenderer_opengl20.hpp  StarStatisticsService_pc_steam.cpp  StarStatisticsService_pc_steam.hpp  StarTextureAtlas.hpp  StarUserGeneratedContentService_pc_steam.cpp  StarUserGeneratedContentService_pc_steam.hpp
source/base/: CMakeLists.txt  StarAnimatedPartSet.cpp  StarAnimatedPartSet.hpp  StarAssetSource.hpp  StarAssets.cpp  StarAssets.hpp  StarBlocksAlongLine.hpp  StarCellularLightArray.cpp  StarCellularLightArray.hpp  StarCellularLighting.cpp  StarCellularLighting.hpp  StarCellularLiquid.hpp  StarConfiguration.cpp  StarConfiguration.hpp  StarDirectoryAssetSource.cpp  StarDirectoryAssetSource.hpp  StarMemoryAssetSource.cpp  StarMemoryAssetSource.hpp  StarMixer.cpp  StarMixer.hpp  StarPackedAssetSource.cpp  StarPackedAssetSource.hpp  StarRootBase.cpp  StarRootBase.hpp  StarVersion.cpp.in  StarVersion.hpp  StarVersionOptionParser.cpp  StarVersionOptionParser.hpp  StarWorldGeometry.cpp  StarWorldGeometry.hpp
source/client/: CMakeLists.txt  StarClientApplication.cpp  StarClientApplication.hpp  StarRenderingLuaBindings.cpp  StarRenderingLuaBindings.hpp  starbound.exe.manifest  starbound.rc
source/core/: CMakeLists.txt  StarAStar.hpp  StarAlgorithm.hpp  StarAndroidLogging.cpp  StarAndroidLogging.hpp  StarArray.hpp  StarAssetPath.cpp  StarAssetPath.hpp  StarAtomicSharedPtr.hpp  StarAudio.cpp  StarAudio.hpp  StarBTree.hpp  StarBTreeDatabase.cpp  StarBTreeDatabase.hpp  StarBiMap.hpp  StarBlockAllocator.hpp  StarBuffer.cpp  StarBuffer.hpp  StarByteArray.cpp  StarByteArray.hpp  StarBytes.hpp  StarCasting.hpp  StarColor.cpp  StarColor.hpp  StarCompression.cpp  StarCompression.hpp  StarConfig.hpp  StarCurve25519.cpp  StarCurve25519.hpp  StarDataStream.cpp  StarDataStream.hpp  StarDataStreamDevices.cpp  StarDataStreamDevices.hpp  StarDataStreamExtra.hpp  StarDirectives.cpp  StarDirectives.hpp  StarDynamicLib.hpp  StarDynamicLib_unix.cpp  StarDynamicLib_windows.cpp  StarEither.hpp  (+174 more)
source/frontend/: CMakeLists.txt  StarActionBar.cpp  StarActionBar.hpp  StarAiInterface.cpp  StarAiInterface.hpp  StarBaseScriptPane.cpp  StarBaseScriptPane.hpp  StarBindingsMenu.cpp  StarBindingsMenu.hpp  StarBookmarkInterface.cpp  StarBookmarkInterface.hpp  StarCharCreation.cpp  StarCharCreation.hpp  StarCharSelection.cpp  StarCharSelection.hpp  StarChat.cpp  StarChat.hpp  StarChatBubbleManager.cpp  StarChatBubbleManager.hpp  StarChatBubbleSeparation.cpp  StarChatBubbleSeparation.hpp  StarCinematic.cpp  StarCinematic.hpp  StarClientCommandProcessor.cpp  StarClientCommandProcessor.hpp  StarClipboardLuaBindings.cpp  StarClipboardLuaBindings.hpp  StarCodexInterface.cpp  StarCodexInterface.hpp  StarConfirmationDialog.cpp  StarConfirmationDialog.hpp  StarContainerInteractor.cpp  StarContainerInteractor.hpp  StarContainerInterface.cpp  StarContainerInterface.hpp  StarControllerSettingsPane.cpp  StarControllerSettingsPane.hpp  StarCraftingInterface.cpp  StarCraftingInterface.hpp  StarErrorScreen.cpp  (+67 more)
source/game/: CMakeLists.txt  StarActorEntity.hpp  StarActorMovementController.cpp  StarActorMovementController.hpp  StarAiDatabase.cpp  StarAiDatabase.hpp  StarAiTypes.cpp  StarAiTypes.hpp  StarAmbient.cpp  StarAmbient.hpp  StarAnimation.cpp  StarAnimation.hpp  StarArmorWearer.cpp  StarArmorWearer.hpp  StarBehaviorDatabase.cpp  StarBehaviorDatabase.hpp  StarBehaviorState.cpp  StarBehaviorState.hpp  StarBiome.cpp  StarBiome.hpp  StarBiomeDatabase.cpp  StarBiomeDatabase.hpp  StarBiomePlacement.cpp  StarBiomePlacement.hpp  StarCelestialCoordinate.cpp  StarCelestialCoordinate.hpp  StarCelestialDatabase.cpp  StarCelestialDatabase.hpp  StarCelestialGraphics.cpp  StarCelestialGraphics.hpp  StarCelestialParameters.cpp  StarCelestialParameters.hpp  StarCelestialTypes.cpp  StarCelestialTypes.hpp  StarChatAction.cpp  StarChatAction.hpp  StarChatProcessor.cpp  StarChatProcessor.hpp  StarChatTypes.cpp  StarChatTypes.hpp  (+303 more)
source/json_tool/: CMakeLists.txt  editor_gui.cpp  editor_gui.hpp  json_tool.cpp  json_tool.hpp
source/mod_uploader/: CMakeLists.txt  StarModUploader.cpp  StarModUploader.hpp  StarSPlainTextEdit.cpp  StarSPlainTextEdit.hpp  StarStringConversion.hpp  main.cpp
source/platform/: CMakeLists.txt  StarDesktopService.hpp  StarP2PNetworkingService.hpp  StarStatisticsService.hpp  StarUserGeneratedContentService.hpp
source/rendering/: CMakeLists.txt  StarAnchorTypes.cpp  StarAnchorTypes.hpp  StarAssetTextureGroup.cpp  StarAssetTextureGroup.hpp  StarDrawablePainter.cpp  StarDrawablePainter.hpp  StarEnvironmentPainter.cpp  StarEnvironmentPainter.hpp  StarFontTextureGroup.cpp  StarFontTextureGroup.hpp  StarTextPainter.cpp  StarTextPainter.hpp  StarTilePainter.cpp  StarTilePainter.hpp  StarWorldCamera.cpp  StarWorldCamera.hpp  StarWorldPainter.cpp  StarWorldPainter.hpp
source/server/: CMakeLists.txt  StarServerQueryThread.cpp  StarServerQueryThread.hpp  StarServerRconClient.cpp  StarServerRconClient.hpp  StarServerRconThread.cpp  StarServerRconThread.hpp  main.cpp  starbound_server.rc
source/test/: CMakeLists.txt  StarTestUniverse.cpp  StarTestUniverse.hpp  algorithm_test.cpp  assets_test.cpp  block_allocator_test.cpp  blocks_along_line_test.cpp  btree_database_test.cpp  btree_test.cpp  byte_array_test.cpp  clock_test.cpp  color_test.cpp  container_test.cpp  core_tests_main.cpp  file_test.cpp  (+40 more)
(+658 files in other folders)
